<resources>
    <string name="app_name">Kingfood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="doesn_t_have_an_account">Doesn\'t Have an account?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="have_account">Have an acoount.</string>
    <string name="email_error">please enter a valid email</string>
    <string name="password_error">please enter password</string>
    <string name="required">Required</string>
    <string name="phone_error">enter valid Phone</string>
    <string name="home">Home</string>
    <string name="offer">offer</string>
    <string name="order">Order</string>
    <string name="cart">Cart</string>
    <string name="go_menu">Go Menu</string>
    <string name="wellcome_header">Wellcome \n %s</string>
    <string name="menu">Menu</string>
    <string name="retry">Retry</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="prodcut">Product</string>
    <string name="create_order">Create Order</string>
    <string name="remove">Remove</string>
    <string name="phone">Phone</string>
</resources>